--- a/src/webparts/complianceOps/components/Pages/Site/page.module.scss
+++ b/src/webparts/complianceOps/components/Pages/Site/page.module.scss
@@ -15,8 +15,9 @@
     "banner banner"
     "buttons buttons"
     "news links";
-    grid-template-rows: 160px 90px 300px;
-    grid-template-columns: 60% 40%;
+    grid-template-rows: 15px;
+    // grid-template-rows: 160px 90px 300px;
+    // grid-template-columns: 60% 40%;
     // grid-template-columns: 1fr 1fr;
 
   // grid-template-areas:
