Refactored SourcePages to include header and footer

--- a/src/webparts/complianceOps/components/Pages/SourcePages/SourcePages.module.scss
+++ b/src/webparts/complianceOps/components/Pages/SourcePages/SourcePages.module.scss
@@ -71,96 +71,96 @@
     flex-wrap: nowrap;
 }
 
-.entityItem {
+// .entityItem {
 
-    //This is the same styling that should be in Search listItem
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    flex-wrap: nowrap;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 99%;
-    padding-top: 20px;
+//     //This is the same styling that should be in Search listItem
+//     display: flex;
+//     flex-direction: row;
+//     align-items: flex-start;
+//     flex-wrap: nowrap;
+//     white-space: nowrap;
+//     overflow: hidden;
+//     text-overflow: ellipsis;
+//     max-width: 99%;
+//     padding-top: 20px;
 
-    i {
-      padding-right: 15px;
-    }
+//     i {
+//       padding-right: 15px;
+//     }
 
-    .entityDetails {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        flex-wrap: nowrap;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-    .entityRow1 {
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        flex-wrap: nowrap;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+//     .entityDetails {
+//         display: flex;
+//         flex-direction: column;
+//         align-items: flex-start;
+//         flex-wrap: nowrap;
+//         white-space: nowrap;
+//         overflow: hidden;
+//         text-overflow: ellipsis;
+//     }
+//     .entityRow1 {
+//         display: flex;
+//         flex-direction: row;
+//         align-items: flex-start;
+//         flex-wrap: nowrap;
+//         white-space: nowrap;
+//         overflow: hidden;
+//         text-overflow: ellipsis;
 
-        div {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
+//         div {
+//             white-space: nowrap;
+//             overflow: hidden;
+//             text-overflow: ellipsis;
+//         }
 
-        div:nth-child(1) { //This is the Entity ID (Number)
-            color: darkblue;
-            width: 35px;
-            font-weight: 600;
-            padding-right: 15px;
-        }
-        div:nth-child(2) { //This is the Entity Parent
-            color: darkred;
-            width: 225px;
-            font-weight: 600;
-        }
+//         div:nth-child(1) { //This is the Entity ID (Number)
+//             color: darkblue;
+//             width: 35px;
+//             font-weight: 600;
+//             padding-right: 15px;
+//         }
+//         div:nth-child(2) { //This is the Entity Parent
+//             color: darkred;
+//             width: 225px;
+//             font-weight: 600;
+//         }
 
-        div:nth-child(3) { //This is the Entity OSCode
-            color: darkgreen;
-            width: 350px;
-            font-weight: 600;
-        }
+//         div:nth-child(3) { //This is the Entity OSCode
+//             color: darkgreen;
+//             width: 350px;
+//             font-weight: 600;
+//         }
 
-        div:nth-child(4) { //This is the Entity HFMCode
-            color: darkviolet;
-            width: 350px;
-            width: calc(100% - 450px);
-            font-weight: 600;
-        }
-    }
+//         div:nth-child(4) { //This is the Entity HFMCode
+//             color: darkviolet;
+//             width: 350px;
+//             width: calc(100% - 450px);
+//             font-weight: 600;
+//         }
+//     }
 
-    .entityRow2 {
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        flex-wrap: nowrap;
-        white-space: nowrap;
-        overflow: hidden;
+//     .entityRow2 {
+//         display: flex;
+//         flex-direction: row;
+//         align-items: flex-start;
+//         flex-wrap: nowrap;
+//         white-space: nowrap;
+//         overflow: hidden;
 
-        div:nth-child(1) { //This is the Controller1
-            // color: darkblue;
-            width: 235px;
-            // font-weight: 600;
-            padding-right: 15px;
-        }
-        // div:nth-child(2) { //This is the Controller2
-            // color: darkred;
-            // width: 225px;
-            // font-weight: 600;
-        // }
+//         div:nth-child(1) { //This is the Controller1
+//             // color: darkblue;
+//             width: 235px;
+//             // font-weight: 600;
+//             padding-right: 15px;
+//         }
+//         // div:nth-child(2) { //This is the Controller2
+//             // color: darkred;
+//             // width: 225px;
+//             // font-weight: 600;
+//         // }
 
-    }
+//     }
 
-}
+// }
 
 .showDetails {
   white-space: pre-wrap;
