--- a/src/webparts/complianceOps/components/Pages/Site/Row.module.scss
+++ b/src/webparts/complianceOps/components/Pages/Site/Row.module.scss
@@ -15,11 +15,12 @@
     padding-top: 15px;
 
     display: grid;
-    grid-template-columns: 150px 50px auto;
-    grid-gap: 20px;
+    grid-template-columns: 250px 50px 30px 30px 30px auto;
+    grid-gap: 10px;
 
     i {
-      padding-right: 15px;
+      // padding-right: 15px;
+      cursor: pointer;
     }
 
     // .genericDetails {
