--- a/src/webparts/complianceOps/components/Pages/Maps/Row.module.scss
+++ b/src/webparts/complianceOps/components/Pages/Maps/Row.module.scss
@@ -4,7 +4,7 @@
     padding-top: 15px;
 
     display: grid;
-    grid-template-columns: 50px 250px 50px 30px 30px 30px auto;
+    grid-template-columns: 250px 50px 30px 30px 30px auto;
     grid-gap: 10px;
 
     i {
