Added Committee and Coordinators info

--- a/src/webparts/complianceOps/components/Pages/Coordinators/Row.module.scss
+++ b/src/webparts/complianceOps/components/Pages/Coordinators/Row.module.scss
@@ -4,7 +4,7 @@
     padding-top: 15px;
 
     display: grid;
-    grid-template-columns: 30px 70px auto;
+    grid-template-columns: 50px 50px 50px 75px 150px auto;
     grid-gap: 10px;
 
     i {
