--- a/src/webparts/complianceOps/components/Pages/SharePoint/header.module.scss
+++ b/src/webparts/complianceOps/components/Pages/SharePoint/header.module.scss
@@ -1,8 +1,10 @@
 @import '~office-ui-fabric-react/dist/sass/References.scss';
 
 .page {
-  display: grid;
-  width: 100%;
+  // display: grid;
+  // width: 100%;
+  margin-top: 20px;
+  margin-left: 10px;
   max-height: 100vh;
   color: black;
 
@@ -17,18 +19,36 @@
 }
 
 .shareLab {
+
+  margin-top: 20px;
   display: grid;
   grid-template-columns: auto auto auto;
-  grid-gap: 15px;
+  grid-gap: 50px;
+  justify-content: start;
 }
 
 .lab {
-  height: 100px;
-  width: 150px;
+  transition:all 0.4s ease;
+  padding: 20px;
+  height: 70px;
+  width: 200px;
   cursor: pointer;
-
-  :hover {
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: nowrap;
+  background: lightgray;
+  border: 1px solid lightgray;
+  .title {
+    font-weight: bolder;
+  }
+  .desc {
+    font-weight: '';
   }
 }
 
+.lab:hover {
+  transition:all 0.4s ease;
+  background: rgb(157, 241, 115);
+  border: 1px solid rgb(157, 241, 115);
+}
