--- a/src/webparts/complianceOps/components/Pages/Details/header.module.scss
+++ b/src/webparts/complianceOps/components/Pages/Details/header.module.scss
@@ -7,6 +7,10 @@
   max-height: 100vh;
   color: black;
 
+  padding: 10px 20px 20px 20px;
+  margin: 0 0!important;
+  background: yellow;
+  
   // https://developer.mozilla.org/en-US/docs/web/css/grid-template-areas
 
   // grid-template-areas:
@@ -15,10 +19,5 @@
   // "news links";
   // grid-template-rows: 15px;
 
-  i {
-    font-size: larger;
-    font-weight: 600;
-    padding: 0px 5px;
-  }
 }
 
