--- a/src/webparts/complianceOps/components/Pages/Home/page.module.scss
+++ b/src/webparts/complianceOps/components/Pages/Home/page.module.scss
@@ -5,6 +5,7 @@
   width: 100%;
   max-height: 100vh;
   color: black;
+  min-height: 50%;
 
   // https://developer.mozilla.org/en-US/docs/web/css/grid-template-areas
 
