--- a/src/webparts/complianceOps/components/Pages/Admins/header.module.scss
+++ b/src/webparts/complianceOps/components/Pages/Admins/header.module.scss
@@ -6,11 +6,8 @@
   width: 100%;
   max-height: 100vh;
   color: black;
-
   padding: 10px 20px 20px 20px;
   margin: 0 0!important;
-  // background: yellow;
-  
   // https://developer.mozilla.org/en-US/docs/web/css/grid-template-areas
 
   // grid-template-areas:
@@ -19,5 +16,10 @@
   // "news links";
   // grid-template-rows: 15px;
 
+  i {
+    font-size: larger;
+    font-weight: 600;
+    padding: 0px 5px;
+  }
 }
 
