--- a/src/webparts/complianceOps/components/Pages/Home/page.module.scss
+++ b/src/webparts/complianceOps/components/Pages/Home/page.module.scss
@@ -14,7 +14,7 @@
   "buttons buttons"
   "news links";
   grid-template-rows: 160px 90px 300px;
-  grid-template-columns: 60% 40%;
+  // grid-template-columns: 60% 40%;
 
   .homeBanner {
     grid-area: banner;
