--- a/src/webparts/complianceOps/components/Pages/Labels/header.module.scss
+++ b/src/webparts/complianceOps/components/Pages/Labels/header.module.scss
@@ -11,6 +11,9 @@
   margin: 0 0!important;
   background: yellow;
   
+  .infoItems {
+    padding: 5px 20px px 20px
+  }
   // https://developer.mozilla.org/en-US/docs/web/css/grid-template-areas
 
   // grid-template-areas:
