--- a/src/webparts/complianceOps/components/Pages/Tips/Row.module.scss
+++ b/src/webparts/complianceOps/components/Pages/Tips/Row.module.scss
@@ -2,21 +2,21 @@
 
 .genericItem {
     padding-top: 15px;
+    
+    // display: grid;
+    // grid-template-columns: 50px 200px auto;
+    // grid-gap: 10px;
 
-    display: grid;
-    grid-template-columns: 50px 200px auto;
-    grid-gap: 10px;
+    // i {
+    //   // padding-right: 15px;
+    //   cursor: pointer;
+    // }
 
-    i {
-      // padding-right: 15px;
-      cursor: pointer;
-    }
-
-    div {
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
+    // div {
+    //   white-space: nowrap;
+    //   overflow: hidden;
+    //   text-overflow: ellipsis;
+    // }
 
 }
 
