--- a/src/webparts/complianceOps/components/Pages/Tips/header.module.scss
+++ b/src/webparts/complianceOps/components/Pages/Tips/header.module.scss
@@ -7,9 +7,9 @@
   max-height: 100vh;
   color: black;
 
-  padding: 10px 20px 20px 20px;
+  // padding: 10px 20px 20px 20px;
   margin: 0 0!important;
-  background: yellow;
+  // background: yellow;
 
   // https://developer.mozilla.org/en-US/docs/web/css/grid-template-areas
 
