--- a/src/webparts/complianceOps/components/WebUrlBox/webInput.module.scss
+++ b/src/webparts/complianceOps/components/WebUrlBox/webInput.module.scss
@@ -15,32 +15,32 @@
   }
 }
 
-.textField1 {
-  display: table-cell;
-  width: 100%;
+// .textField1 {
+//   display: table-cell;
+//   width: 100%;
 
-  label {
-    font-weight: bold;
-  }
+//   label {
+//     font-weight: bold;
+//   }
 
-  input {
-    @extend .highlightBlink1;
-    //height: 32px;
-    min-width: 80px;
-  }
-}
+//   input {
+//     @extend .highlightBlink1;
+//     //height: 32px;
+//     min-width: 80px;
+//   }
+// }
 
-.textField2 {
-  display: table-cell;
-  width: 100%;
+// .textField2 {
+//   display: table-cell;
+//   width: 100%;
 
-  label {
-    font-weight: bold;
-  }
+//   label {
+//     font-weight: bold;
+//   }
 
-  input {
-    @extend .highlightBlink2;
-    //height: 32px;
-    min-width: 80px;
-  }
-}
+//   input {
+//     @extend .highlightBlink2;
+//     //height: 32px;
+//     min-width: 80px;
+//   }
+// }
