--- a/src/webparts/complianceOps/components/Pages/Experts/header.module.scss
+++ b/src/webparts/complianceOps/components/Pages/Experts/header.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   max-height: 100vh;
   color: black;
-
+  padding: 10px 20px 20px 20px;
   // https://developer.mozilla.org/en-US/docs/web/css/grid-template-areas
 
   // grid-template-areas:
