Add Label Rows, Start Suggestions

--- a/src/webparts/complianceOps/components/Pages/Labels/Row.module.scss
+++ b/src/webparts/complianceOps/components/Pages/Labels/Row.module.scss
@@ -4,7 +4,7 @@
     padding-top: 15px;
 
     display: grid;
-    grid-template-columns: 50px 200px auto;
+    grid-template-columns: 80px 200px auto;
     grid-gap: 10px;
 
     i {
@@ -13,9 +13,9 @@
     }
 
     div {
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+      // white-space: nowrap;
+      // overflow: hidden;
+      // text-overflow: ellipsis;
     }
 
 }
