--- a/src/webparts/complianceOps/components/Pages/RigItems/Row.module.scss
+++ b/src/webparts/complianceOps/components/Pages/RigItems/Row.module.scss
@@ -4,7 +4,7 @@
     padding-top: 15px;
 
     display: grid;
-    grid-template-columns: 80px 200px auto;
+    grid-template-columns: 60px 150px auto 85px 156px 100px 150px;
     grid-gap: 10px;
 
     i {
