--- a/src/webparts/complianceOps/components/Pages/RigItems/header.module.scss
+++ b/src/webparts/complianceOps/components/Pages/RigItems/header.module.scss
@@ -31,6 +31,13 @@
     }
 
   }
+
+  .isLink {
+    color: blue;
+    text-decoration: underline;
+    cursor: pointer;
+    padding: 5px 0px;
+  }
   // https://developer.mozilla.org/en-US/docs/web/css/grid-template-areas
 
   // grid-template-areas:
