--- a/src/webparts/complianceOps/components/Pages/RigItems/Row.module.scss
+++ b/src/webparts/complianceOps/components/Pages/RigItems/Row.module.scss
@@ -2,10 +2,10 @@
 
 .genericItem {
   padding-top: 15px;
-  display: grid;
-  grid-gap: 10px;
+  // display: grid;
+  // grid-gap: 10px;
   justify-items: start;
-  
+
   i {
     // padding-right: 15px;
     cursor: pointer;
@@ -18,13 +18,13 @@
 }
 
 .genericItem0 {
-  grid-template-columns: auto auto auto auto auto;
+  // grid-template-columns: auto auto auto auto auto;
 }
 
 .genericItem1 {
-    grid-template-columns: 150px auto 85px 200px 40px 40px 60px;
+    // grid-template-columns: 150px auto 85px 200px 40px 40px 60px;
 }
 
 .genericItem2 {
-  grid-template-columns: 150px auto 85px 40px 40px 60px;
+  // grid-template-columns: 150px auto 85px 40px 40px 60px;
 }
