--- a/src/webparts/complianceOps/components/Pages/RigItems/header.module.scss
+++ b/src/webparts/complianceOps/components/Pages/RigItems/header.module.scss
@@ -7,7 +7,7 @@
   max-height: 700vh;
   color: black;
 
-  padding: 10px 50px 20px 20px;
+  // padding: 10px 50px 20px 20px;
   margin: 0 0!important;
   // background: yellow;
 
