--- a/src/webparts/complianceOps/components/Pages/AllLists/Row.module.scss
+++ b/src/webparts/complianceOps/components/Pages/AllLists/Row.module.scss
@@ -1,22 +1,20 @@
 @import '~office-ui-fabric-react/dist/sass/References.scss';
 
 .genericItem {
-    padding-top: 15px;
+  padding-top: 15px;
+  // display: grid;
+  // grid-gap: 10px;
+  justify-items: start;
+  i {
+    // padding-right: 15px;
+    cursor: pointer;
+  }
 
-    display: grid;
-    grid-template-columns: 80px 200px auto;
-    grid-gap: 10px;
-
-    i {
-      // padding-right: 15px;
-      cursor: pointer;
-    }
-
-    div {
-      // white-space: nowrap;
-      // overflow: hidden;
-      // text-overflow: ellipsis;
-    }
+  div {
+    // white-space: nowrap;
+    // overflow: hidden;
+    // text-overflow: ellipsis;
+  }
 
 }
 
