close #81, close #83, close #84, close #85

--- a/src/webparts/complianceOps/components/Pages/RigItems/Row.module.scss
+++ b/src/webparts/complianceOps/components/Pages/RigItems/Row.module.scss
@@ -17,6 +17,16 @@
   }
 }
 
+.rigItemFacilityNote {
+  font-weight: bold;
+  color: darkgreen;
+}
+
+.rigItemCountryNote {
+  font-weight: bold;
+  color: darkred;
+}
+
 .genericItem0 {
   // grid-template-columns: auto auto auto auto auto;
 }
