update styling on Facility and Country counts

--- a/src/webparts/complianceOps/components/Pages/RigItems/Row.module.scss
+++ b/src/webparts/complianceOps/components/Pages/RigItems/Row.module.scss
@@ -18,12 +18,12 @@
 }
 
 .rigItemFacilityNote {
-  font-weight: bold;
+  font-weight: 600;
   color: darkgreen;
 }
 
 .rigItemCountryNote {
-  font-weight: bold;
+  font-weight: 600;
   color: darkred;
 }
 
