--- a/src/webparts/complianceOps/components/Pages/RigItems/Row.module.scss
+++ b/src/webparts/complianceOps/components/Pages/RigItems/Row.module.scss
@@ -27,6 +27,16 @@
   color: darkred;
 }
 
+//Commonize these styles across web part for common icons
+.rigItemOpenIcon0 {
+  font-size: large;
+}
+
+.rigItemOpenIcon12 {
+  font-size: large;
+  padding: 5px;
+}
+
 .genericItem0 {
   // grid-template-columns: auto auto auto auto auto;
 }
