--- a/src/webparts/complianceOps/components/Pages/Labels/header.module.scss
+++ b/src/webparts/complianceOps/components/Pages/Labels/header.module.scss
@@ -11,8 +11,30 @@
   margin: 0 0!important;
   // background: yellow;
   
+  //Commonize these styles across web part for common icons
+  .itemTable {
+    overflow-x: auto;
+    width: 100%;
+    margin-top: 15px;
+    tr:nth-child(even) {background-color: #f2f2f2;}
+    th {
+      transition:all 0.3s ease;
+      background-color: gray;
+      color: white;
+      padding: 5px 10px;
+    }
+    tr:hover {
+      transition:all 0.3s ease;
+      background: lightgray;
+    }
+
+    td {
+      padding: 5px 10px;
+    }
+  }
+
   .infoItems {
-    padding: 5px 20px px 20px
+    padding: 5px 20px 5px 20px
   }
 
   .suggestions {
