--- a/src/webparts/complianceOps/components/Pages/RigItems/Row.module.scss
+++ b/src/webparts/complianceOps/components/Pages/RigItems/Row.module.scss
@@ -28,11 +28,11 @@
 }
 
 //Commonize these styles across web part for common icons
-.rigItemOpenIcon0 {
+.rigItemOpenIcon0 i {
   font-size: large;
 }
 
-.rigItemOpenIcon12 {
+.rigItemOpenIcon12 i {
   font-size: large;
   padding: 5px;
 }
