--- a/src/webparts/complianceOps/components/Pages/Labels/header.module.scss
+++ b/src/webparts/complianceOps/components/Pages/Labels/header.module.scss
@@ -10,12 +10,15 @@
   padding: 10px 20px 20px 20px;
   margin: 0 0!important;
   // background: yellow;
-  
+
   //Commonize these styles across web part for common icons
+  // EXCEPT THIS ONE HAS MORE TOP AND BOTTOM PADDING
   .itemTable {
     overflow-x: auto;
     width: 100%;
     margin-top: 15px;
+    padding-right: 20px;
+
     tr:nth-child(even) {background-color: #f2f2f2;}
     th {
       transition:all 0.3s ease;
@@ -29,7 +32,7 @@
     }
 
     td {
-      padding: 5px 10px;
+      padding: 8px 10px;
     }
   }
 
